--- a/src/Resources/config/doctrine/User.orm.yml
+++ b/src/Resources/config/doctrine/User.orm.yml
@@ -15,7 +15,7 @@ Users\Entity\User:
 
   oneToMany:
     attributes:
-      targetEntity: App\Entity\UserHasAttribute
+      targetEntity: Users\Entity\UserHasAttribute
       mappedBy: user
       cascade: ["persist", "remove"]
       orderBy: { name: 'ASC' }
