--- a/etc/php/Dockerfile
+++ b/etc/php/Dockerfile
@@ -4,9 +4,14 @@ WORKDIR /app
 
 RUN apk --update upgrade \
     && apk add --no-cache autoconf automake make gcc g++ icu-dev \
+    && pecl install \
+        apcu-5.1.17 \
     && docker-php-ext-install -j$(nproc) \
         bcmath \
         opcache \
         intl \
         sqlite3 \
-    && docker-php-ext-enable opcache
+    && docker-php-ext-enable \
+        apcu \
+        opcache \
+        sqlite3
