Docker and DI working. Fix schema relations.

--- a/.env
+++ b/.env
@@ -28,4 +28,4 @@ APP_SECRET=7d31665a04e06694879aa7d2b7af949d
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
-DATABASE_URL='sqlite:///./data/db/sqlite/db.sqlite'
+DATABASE_URL=mysql://root@db:3306/users?serverVersion=10.4.12
