--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,6 @@
 parameters:
 
 services:
-    # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
@@ -13,3 +12,8 @@ services:
     Users\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
+    Users\Service\UserManager:
+        class: Users\Service\UserManager
+        arguments:
+            - "@doctrine.orm.entity_manager"
