--- a/src/Resources/config/doctrine/UserHasAttribute.orm.yml
+++ b/src/Resources/config/doctrine/UserHasAttribute.orm.yml
@@ -15,6 +15,7 @@ Users\Entity\UserHasAttribute:
   manyToOne:
     user:
       targetEntity: Users\Entity\User
+      inversedBy: attributes
       cascade: ["persist"]
     attribute:
       targetEntity: Users\Entity\Attribute
