--- a/etc/php/Dockerfile
+++ b/etc/php/Dockerfile
@@ -1,17 +1,6 @@
-FROM php:7.4.2-fpm-alpine
+FROM php:7.4.2-fpm
 
 WORKDIR /app
 
-RUN apk --update upgrade \
-    && apk add --no-cache autoconf automake make gcc g++ icu-dev \
-    && pecl install \
-        apcu-5.1.17 \
-    && docker-php-ext-install -j$(nproc) \
-        bcmath \
-        opcache \
-        intl \
-        sqlite3 \
-    && docker-php-ext-enable \
-        apcu \
-        opcache \
-        sqlite3
+RUN apt-get update && apt-get install -y \
+    && docker-php-ext-install -j$(nproc) pdo_mysql
